2003-08-23  Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/Containers/main.m: added height resize flag
	to TextView prototype to correct bug #3270

2003-08-23  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.[hm]: Made selectClassWithObject public.
	* GormInspectorManager.m: Added logic to call selectClassWithObject
	so that when an object is selected, the classes view focuses on it.
	
2003-08-22  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Removed extraneous release calls.  In most
	cases only initWithCapacity and such were being called to create
	dictionaries.  These are not retained, so they will be garbage 
	collected.
	* GormDocument.m: Corrected detachObject: method to handle scroll
	views.  The document view was not being deleted from the custom class
	list, so Gorm was saving a corrupted .gorm file.

2003-08-22  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Removed refrences to old template classes.
	Added code to use new template classes and fixed several 
	bugs.
	* Gorm.m: Removed old subclasses for deprecated template classes.
	* GormPrivate.h: Removed subclasses for deprecated template classes.
	* GormLib/IBConnectors.[hm]: added nibInstantiate method.
	
2003-08-16  Adam Fedor  <fedor@gnu.org>

	* GNUmakefile.preamble (ADDITIONAL_GUI_LIBS): Add -lGormLib

2003-08-13  Fabien Vallon  <fabien@tuxfamily.org>

	* GormNSPopUpButton.goem : Add Visual help

2003-08-10  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormInternalViewEditor.m: Added initilization for variable r so
	that it is not used uninitialized if the first event is not 
	NSLeftMouseUp.

2003-08-10  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocuments.m: -[GormDocument
	pasteType:fromPasteBoard:parent:] Added check to determine if
	frame is responded to by the object being copied.  This was
	failing on NSMenuItem.

2003-08-09  Gregory John Casamento <greg_casamento@yahoo.com>
